replaced previous leson files EJS TAGS with current lesson files PASSING DATA TO EJS TEMPLATES

--- a/views/solution.ejs
+++ b/views/solution.ejs
@@ -1,44 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Name Letters</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>EJS Tags</title>
-</head>
-
-<body>
-  <h1>
-    <!-- Tite goes here -->
-    <%= title %>
-  </h1>
-  <p>Current second:
-    <!-- Current second goes here -->
-    <%= seconds %>
-  </p>
-  <% if (seconds % 2===0) { %>
-    <ul>
-      <!-- List goes here if current second is even. -->
-      <%items.forEach((fruit)=> { %>
-        <li>
-          <%=fruit %>
-        </li>
-        <%}) %>
-
-          <!-- Otherwise it should display the following: -->
-          <!-- <p>No items to display</p> -->
-    </ul>
-    <% } else {%>
-      <p>No items to display</p>
-      <% } %>
-
-        <p>
-          <!-- HTML content goes here -->
-          <%- htmlContent %>
-        </p>
-
-        <!-- Footer goes here -->
-        <%- include("footer.ejs") %>
-</body>
-
+  <body>
+    <% if (locals.numberOfLetters) { %>
+    <h1>There are <%= numberOfLetters %> letters in your name.</h1>
+    <% } else { %>
+    <h1>Enter your name below 👇</h1>
+    <% } %>
+    <form action="/submit" method="POST">
+      <input type="text" name="fName" placeholder="First name" />
+      <input type="text" name="lName" placeholder="Last name" />
+      <input type="submit" value="OK" />
+    </form>
+  </body>
 </html>
