--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,41 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1.0"
-        />
-        <title>EJS Tags</title>
-    </head>
 
-    <body>
-        <h1><%= title %></h1>
-        <p>
-            Current second:
-            <!-- Current second goes here -->
-            <%= seconds %>
-        </p>
-        <% if (seconds % 2===0) { %>
-        <ul>
-            <!-- List goes here if current second is even. -->
-            <!-- Otherwise it should display the following: -->
-            <!-- <p>No items to display</p> -->
-            <% for(let i=0; i<items.length; i++) { %>
-              <li>
-                <%= items[i] %>
-              </li>
-           <% } %>
-        </ul>
-       <% } else { %>
-        <p>No items to display</p>
-       <% } %>
-        <p>
-            <!-- HTML content goes here -->
-            <%- htmlContent %>
-        </p>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Name Letters</title>
+</head>
 
-        <!-- Footer goes here -->
-        <%- include('footer.ejs') %>
-    </body>
+<body>
+  <!-- Write your code here -->
+  <form action="/submit" method="POST">
+    <input type="text" name="fName" placeholder="First name">
+    <input type="text" name="lName" placeholder="Last name">
+    <input type="submit" value="OK">
+  </form>
+</body>
+
 </html>
